getting-started/src/main/docker/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/application"
                route:
                  cluster: application
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: application
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    health_checks:
      timeout: 2s
      interval: 5s
      unhealthy_threshold: 2
      healthy_threshold: 1
      http_health_check:
        path: "/application/health"
    load_assignment:
      cluster_name: application
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: application-1
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: application-2
                port_value: 8080
                
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
